--- a/src/app/pokedex/pokedex.page.html
+++ b/src/app/pokedex/pokedex.page.html
@@ -1,24 +1,26 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="home" color="primary"></ion-back-button>
+      <ion-back-button defaultHref="home" color="primary" text="HOME"></ion-back-button>
     </ion-buttons>
-    <ion-title>Pokedex</ion-title>
+    <!-- <ion-title>Pokédex</ion-title> -->
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+    <h1 class="ion-text-center title">Pokédex</h1>
+    <p class="ion-text-center description">You can find every pokémon here, take a look!</p>
     <ion-grid>
-      <ion-row>      
+      <ion-row>    
         <ion-col *ngFor="let pokemon of pokemons" size="12" size-lg="4" size-sm="6">
-          <ion-card>
+          <ion-card >
               <ion-card-header>
-                <ion-card-title>{{pokemon.name}}</ion-card-title>
+                <ion-card-title class="ion-text-center" color="dark">{{pokemon.name}}</ion-card-title>
                 <ion-img src="{{pokemon.img}}" alt="{{pokemon.name}}"></ion-img>
               </ion-card-header>
       
               <ion-card-content>
-                <ion-button expand="block">DETAILS</ion-button>
+                <ion-button expand="block"  fill="outline" shape="round" color="dark">DETAILS</ion-button>
               </ion-card-content>
           </ion-card>
         </ion-col>
