Create and customize pokemon page, implement app routing

--- a/src/app/pokedex/pokedex.page.html
+++ b/src/app/pokedex/pokedex.page.html
@@ -20,7 +20,7 @@
               </ion-card-header>
       
               <ion-card-content>
-                <ion-button expand="block"  fill="outline" shape="round" color="dark">DETAILS</ion-button>
+                <ion-button expand="block" fill="outline" shape="round" color="dark" [routerLink]="['/pokemon/'+pokemon.id]">DETAILS</ion-button>
               </ion-card-content>
           </ion-card>
         </ion-col>
