--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,26 +1,45 @@
+#container,
+.home-title{
+  display: flex;
+}
 #container {
   text-align: center;
-  position: absolute;
-  left: 0;
-  right: 0;
+  position: relative;
   top: 50%;
   transform: translateY(-50%);
+  align-items: center;
+  justify-content: center;
+  flex-direction: column-reverse;
+  padding: 1rem;
 }
 
 #container strong {
-  font-size: 20px;
-  line-height: 26px;
+  font-size: 2.5rem;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.pokemon-main{
+  width: 90%;
+  max-width: 30rem;
 }
-
-#container a {
-  text-decoration: none;
+.home-title{
+  flex-direction: column;
+  text-align: left;
+  gap: 1rem;
+}
+ion-button {
+  width: 100%;
+  max-width: 10rem;
+}
+@media only screen and (min-width:40rem) {
+  #container strong {
+    font-size: 4rem;
+  }
+}
+@media only screen and (min-width:80rem) {
+  #container {
+    flex-direction: row;
+  }
+  #container strong {
+    font-size: 5rem;
+  }
 }
