--- a/src/app/pokedex/pokedex.page.scss
+++ b/src/app/pokedex/pokedex.page.scss
@@ -14,10 +14,14 @@ ion-card{
     background-color: rgba(255, 255, 255, 0.85);
     backdrop-filter: blur( 4px );
 }
-ion-card-header{
+ion-card-header,
+.pokedex-btns
+{
     display: flex;
-    flex-direction: column;
     align-items: center;
+}
+ion-card-header{
+    flex-direction: column;
 }
 ion-img{
     width: 90%;
@@ -37,8 +41,6 @@ ion-card-title{
     margin-bottom: 2rem;
 }
 .pokedex-btns{
-    display: flex;
-    align-items: center;
     justify-content: center;
     margin-top: 2rem;
 }
