--- a/src/app/pokemon/pokemon.page.scss
+++ b/src/app/pokemon/pokemon.page.scss
@@ -1,17 +1,35 @@
-ion-card-header{
+ion-card-header,
+.pokemon-container,
+.pokemon-char,
+.pokemon-char-subtitle,
+.pokemon-char-value{
     display: flex;
+}
+.pokemon-char-subtitle,
+.pokemon-char-value{
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+.pokemon-name,
+.char-value{
+    font-weight: bold;
+}
+.pokemon-card,
+.pokemon-img
+{
+    width: 90%;
+}
+ion-card-header{
     flex-direction: column;
-    width: auto;
 }
 .pokemon-container{
     backdrop-filter: blur( 4px );
     padding-top: 10rem;
-    display: flex;
-    justify-content:  center;
+    justify-content: center;
 }
 .pokemon-type{
     background-color: var(--ion-color-warning);
-    width: auto;
     padding: .5rem .7rem;
     border-radius: 5rem;
     color: var(--ion-color-light);
@@ -25,7 +43,6 @@ ion-card-header{
 .pokemon-card{
     background-color: rgba(255, 255, 255, 0.85);
     backdrop-filter: blur( 4px );
-    width: 90%;
     max-width: 40rem;
     min-height: 30rem;
     margin-top: 1%; 
@@ -34,11 +51,9 @@ ion-card-header{
 }
 .pokemon-name{
     color: black;
-    font-weight: bold;
     font-size: 1.7rem;
 }
 .pokemon-img{
-    width: 90%;
     max-width: 30rem;
     height: 15rem;
     position: absolute;
@@ -49,14 +64,15 @@ ion-card-header{
 .pokemon-img{
     z-index: 2;
 }
+.pokemon-grid-chars,
+.pokemon-grid-char{
+    padding: 0;
+}
 .pokemon-grid-chars{
     width: 100%;
-    padding: 0;
-    
 }
 .pokemon-grid-char{
     columns: 2;    
-    padding: 0;
     gap: 0;
 }
 ion-row{
@@ -66,20 +82,9 @@ ion-row{
     border: solid 1px var(--ion-color-dark);
     border-radius: 5rem;    
     padding: 1rem;
-    display: flex;
 }
 .pokemon-char-subtitle{
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-}
-.pokemon-char-value{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
 }
 .char-img{
     width: 2.5rem;
@@ -93,7 +98,6 @@ ion-row{
     color:var(--ion-color-dark);
 }
 .char-value{
-    font-weight: bold;
     font-size: 2rem;
 }
 .char-description{
