Create a production build and an android app

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Pokemon</ion-title>
+      <ion-title size="large">Pokémon</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -29,7 +29,7 @@
     <img 
       class="pokemon-main" 
       src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/136.svg"
-      alt="Pikachu"
+      alt="Pokemon Flareon"
     />
   </div>
 </ion-content>
